# legis-tation

./: Cargo.toml  README.md  clippy.toml  rustfmt.toml
.cargo/: config.toml
crates/derive/: cargo.toml
crates/derive/src/: lib.rs
crates/derives/: cargo.toml
crates/grab_get/: cargo.toml
crates/grab_get/src/: lib.rs
crates/logging/: cargo.toml
crates/logging/src/: flame.rs  grab.rs  lib.rs  log.rs  main.rs  mcro.rs  message.rs
crates/logging/src/check/: results.rs
crates/logging/src/logger/: check.rs  flame.rs  log.rs  message.rs  mod.rs  status.rs
crates/logging/src/macros/: grab.rs  logln.rs  mod.rs
crates/logging/src/setup/: mod.rs
crates/mega_state/: cargo.toml
crates/mega_state/src/: bundle_data.rs  comp.rs  lib.rs  shared_type.rs  text.txt  variants_data.rs
crates/mega_state/src/mega_state/: bundle.rs  mod.rs  text.rs
crates/node/: cargo.toml
crates/node/src/nodes/: child.rs  entry.rs  error.rs  mod.rs  node.rs  process.rs  read.rs  state.rs
crates/parser/: cargo.toml
crates/parser/src/parse/: mod.rs  node.rs  process.rs
crates/preconfig/: cargo.toml
crates/proc/: cargo.toml
crates/progress/: cargo.toml
crates/progress/src/: error.rs  leaf.rs  lib.rs  main.rs  progression.rs  read.rs  templates.rs  tree.rs  write.rs
crates/progress/src/test/: mod.rs
crates/tests/: cargo.toml
crates/tests/src/test/: path.rs
progress/: PROGRESS.md  TEMPLATE.md
src/: lib.rs  prelude.rs
